@@ -1,4 +1,4 @@
-SBuild 0.5.0.9001 - trunk:
+SBuild trunk:
 
 * Fixed a bug in SBuildEmbedded concerning incomplete file lists for local
   file dependencies.
@@ -25,6 +25,8 @@ SBuild 0.5.0.9001 - trunk:
 * Improved error messages of ScanSchemeHandler.
 * Added new commandline option --repeat to let SBuild repeat an action after
   a given time interval.
+* Build script compiler now records scala compiler output, e.g. for later use
+  in IDEs.
 
 SBuild 0.5.0 - 2013-07-12:
 
